--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
     
 
 </head>
-<body >
-  
+<body class="" id="boody">
+  <!-- toggle-sidebar -->
     <app-root></app-root>
 
     <!-- Vendor JS Files -->
@@ -47,6 +47,7 @@
 
      <!-- Template Main JS File -->
     <script src="./assets/js/main.js"></script>
+    <script src="../src/assets/js/main.js"></script>
     
 
 </body>
